fixed hidden overflow

--- a/app/assets/stylesheets/brooklyn_pizzas.css.scss
+++ b/app/assets/stylesheets/brooklyn_pizzas.css.scss
@@ -8,8 +8,8 @@
 html, body {
   padding: 0 !important;
   margin: 0 !important;
-  overflow: hidden;
-  height: 100%;
+/*  overflow: hidden;
+*/  height: 100%;
 }
 
 .btn {
@@ -40,7 +40,7 @@ html, body {
 }
 
 .navbar-inverse {
-	margin-bottom: 50px;
+	margin-bottom: 0px;
 	border-radius: 0px;
 }
 
@@ -53,7 +53,9 @@ h2 {
   color: #000;
   text-align: center;
 }
-
+.marketing {
+  margin-top: 50px;
+}
 .logo{
   img {
     display: block;
